# lan-cat

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: clipboard.rs  config.rs  daemon.rs  gui.rs  integration.rs  ipc.rs  main.rs  network.rs  ordering.rs  protocol.rs  service.rs
src/clipboard/: files.rs  macos.rs  mod.rs  wayland.rs
src/input/: beacon.rs  mod.rs  protocol.rs  transport.rs
src/input/platform/: macos.rs  mod.rs  wayland.rs
src/transfer/: mod.rs  protocol.rs
