[package]
name = "lan-cat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Secure peer-to-peer LAN clipboard sync for Wayland and macOS"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
hex = "0.4"
mdns-sd = "0.20"
nix = { version = "0.30", features = ["socket", "user"] }
libc = "0.2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
snow = { version = "0.10", features = ["ring-accelerated"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
