[package]
name = "lan-cat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Secure peer-to-peer LAN clipboard sync for Wayland and macOS"

[dependencies]
anyhow = "1"
blake3 = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
directories = "6"
eframe = { version = "0.32.2", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
hex = "0.4"
mdns-sd = "0.20"
nix = { version = "0.30", features = ["socket", "user"] }
libc = "0.2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
snow = { version = "0.10", features = ["ring-accelerated"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
x25519-dalek = "2"

[target.'cfg(target_os = "linux")'.dependencies]
smithay-client-toolkit = { version = "0.19", default-features = false }
wl-clipboard-rs = "0.9"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSData", "NSString", "NSURL"] }

[profile.release]
lto = "thin"
strip = true
